fix: Sets brewdex env on goreleaser action.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,3 +28,4 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BREWDEX_GITHUB_TOKEN: ${{ secrets.BREWDEX_GITHUB_TOKEN }}
