--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -37,7 +37,7 @@ brews:
       owner: brewdex
       name: homebrew-awsure
       branch: main
-      token: ${{ secrets.BREWDEX_GITHUB_TOKEN }}
+      token: "{{ .Env.BREWDEX_GITHUB_TOKEN }}"
       pull_request:
         enabled: true
         base:
